--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <span>Countdown to 2022 <br> 
         Annual Mercy Conference</span>
     </h1>
+    
+    <!-- <audio id="audio" src="img/good_good_father_chris_tomlin_mp3_84527.mp3" autoplay loop></audio> -->
 
     <div id="countdown" class="countdown">
         <div class="time">
